Fix text align in rating reply

--- a/app/app/styles/_profileCommon.scss
+++ b/app/app/styles/_profileCommon.scss
@@ -479,6 +479,7 @@
             margin-bottom: 5px;
           }
           .rating-text {
+            margin-left: 10px;
             font-size: 1rem;
             line-height: 150%;
           }
